[gd_scene load_steps=11 format=2]

[ext_resource path="res://PlayerCharacter.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Concepts/ASAN_IDLE/Asan1.png" type="Texture" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.51462, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.992188, 1, 0, 1, 0, 1, 0.0859375, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0, 0.90625, 1, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="DynamicFont" id=22]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 0, 0, 0, 0.854902 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 23 )

[node name="PlayerCharacter4" type="Panel" groups=["PlayerPanel"]]
margin_left = 492.0
margin_right = 756.0
margin_bottom = 264.0
rect_min_size = Vector2( 264, 0 )
rect_pivot_offset = Vector2( 132, 132 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.108696
anchor_top = 0.217391
anchor_right = 0.890913
anchor_bottom = 0.782217
margin_right = 0.0719986
margin_bottom = 0.0719986
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HPBAR" type="TextureProgress" parent="."]
anchor_left = 0.108696
anchor_top = 0.798913
anchor_right = 0.890913
anchor_bottom = 0.842
margin_right = 0.0719986
margin_bottom = 0.0719986
value = 80.0
texture_progress = SubResource( 19 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MPBAR" type="TextureProgress" parent="."]
anchor_left = 0.108696
anchor_top = 0.869565
anchor_right = 0.890913
anchor_bottom = 0.912652
margin_right = 0.0719986
margin_bottom = 0.0719986
value = 100.0
texture_progress = SubResource( 21 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HP" type="Label" parent="."]
anchor_left = 0.108696
anchor_top = 0.798913
anchor_right = 0.890913
anchor_bottom = 0.842435
margin_right = 0.0719986
margin_bottom = -0.00800133
custom_fonts/font = SubResource( 22 )
text = "80"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MP" type="Label" parent="."]
anchor_left = 0.108696
anchor_top = 0.869565
anchor_right = 0.890913
anchor_bottom = 0.913087
margin_right = 0.0719986
margin_bottom = -0.00800133
custom_fonts/font = SubResource( 22 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Name" type="Label" parent="."]
anchor_left = 0.108696
anchor_top = 0.0869565
anchor_right = 0.890913
anchor_bottom = 0.130478
margin_right = 0.0719986
margin_bottom = -0.00800133
custom_fonts/font = SubResource( 22 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = -0.00384848
anchor_top = -0.000333324
anchor_right = 0.996636
anchor_bottom = 1.00015
margin_left = 1.016
margin_top = 0.0879974
margin_right = 0.887993
margin_bottom = -0.0400085
texture_progress = SubResource( 24 )
fill_mode = 4
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 16, -8 )
width = 7.0
default_color = Color( 0, 0.415686, 1, 1 )

[node name="Tween" type="Tween" parent="Line2D"]

[connection signal="gui_input" from="." to="." method="_on_PlayerCharacter4_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PlayerCharacter4_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PlayerCharacter4_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
